--- a/A1 Evo MJ_Custom.html
+++ b/A1 Evo MJ_Custom.html
@@ -10218,7 +10218,7 @@ zip.file("_micCal.txt", micCal);
       const targetArray = await getTargetArray(start, end, ppo);
       const freqResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, noM);
       const aSumArray = response2array(freqResponse, start, end);
-      return calculateRmsError(aSumArray, targetArray);
+      return calculateRMSError(aSumArray, targetArray);
     }
     async function finalizeXO() {
       console.log("Finalizing crossover frequencies to best follow the target curve...");
@@ -10596,8 +10596,8 @@ zip.file("_micCal.txt", micCal);
       }
       return responseArray;
     }
-    function calculateRmsError(rpArray, targetArray, offset=0.0) {
-      if (rpArray.length === 0) { return Infinity; }
+    function calculateRMSError(rpArray, targetArray, offset=0.0) {
+      if (rpArray.length === 0 || rpArray.length != targetArray.length) { return Infinity; }
       let sumOfSquares = 0;
       for (let i = 0; i < rpArray.length; i++) {
         const diff = (rpArray[i] + offset) - targetArray[i];
@@ -10605,6 +10605,14 @@ zip.file("_micCal.txt", micCal);
       }
       const meanOfSquares = sumOfSquares / rpArray.length;
       return Math.sqrt(meanOfSquares);
+    }
+    function calculateMAError(rpArray, targetArray, offset=0.0) {
+      if (rpArray.length === 0 || rpArray.length != targetArray.length) { return Infinity; }
+      let sumOfAbsoluteErrors = 0;
+      for (let i = 0; i < rpArray.length; i++) {
+        sumOfAbsoluteErrors += Math.abs((rpArray[i] + offset) - targetArray[i]);
+      }
+      return sumOfAbsoluteErrors / rpArray.length;
     }
     function calculateLinearityScore(rpArray) {
       if (rpArray.length === 0) { return -Infinity; }
@@ -10633,11 +10641,11 @@ zip.file("_micCal.txt", micCal);
       const freqResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, noM);
       const subArray = response2array(freqResponse, start, end);
       let bestOffset = null;
-      let lowestRmsError = Infinity;
+      let lowestMAError = Infinity;
       for (let offset = -20; offset <= 20; offset += 0.5) { // extra room for combining multi-sub
-        const rmsError = calculateRmsError(subArray, targetArray, offset);
-        if (rmsError < lowestRmsError) {
-          lowestRmsError = rmsError;
+        const MAError = calculateMAError(subArray, targetArray, offset);
+        if (MAError < lowestMAError) {
+          lowestMAError = MAError;
           bestOffset = offset;
         }
       }
@@ -10645,14 +10653,14 @@ zip.file("_micCal.txt", micCal);
     }
     async function getSpeakerTrim(noM, start=250, end=4000, ppo=96) {
       const targetArray = await getTargetArray(start, end, ppo);
-      const freqResponse = await fetchSafe(`frequency-response?smoothing=Psy&ppo=${ppo}`, noM);
+      const freqResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, noM);
       const spArray = response2array(freqResponse, start, end);
       let bestOffset = null;
-      let lowestRmsError = Infinity;
-      for (let offset = -12; offset <= 12; offset += 0.5) {
-        const rmsError = calculateRmsError(spArray, targetArray, offset);
-        if (rmsError < lowestRmsError) {
-          lowestRmsError = rmsError;
+      let lowestMAError = Infinity;
+      for (let offset = -12.5; offset <= 12.5; offset += 0.5) { // extra 0.5 helps identify if a speaker is out of limits
+        const MAError = calculateMAError(spArray, targetArray, offset);
+        if (MAError < lowestMAError) {
+          lowestMAError = MAError;
           bestOffset = offset;
         }
       }
